fix(tab): overflow auto

--- a/apps/web/src/components/shared/SharedTabs/sharedTabs.module.scss
+++ b/apps/web/src/components/shared/SharedTabs/sharedTabs.module.scss
@@ -9,7 +9,7 @@
         text-transform: capitalize;
     }
 
-    [class*="MuiTabs-scroller"] {
+    [class*="MuiTabs-list"] {
         overflow: auto;
     }
 }
